samples/_failures_safe/1761257180_111408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ebc4440.c:122:1: error: expected identifier or ‘(’ at end of input
  122 | int
      | ^~~
